remove jmh-specific parameters